--- a/OfflineMapBook/OfflineMapBook/Views/MainView.xaml
+++ b/OfflineMapBook/OfflineMapBook/Views/MainView.xaml
@@ -10,6 +10,7 @@
     <Grid>
         <Grid.Resources>
             <converters:RuntimeImageConverter x:Key="RuntimeImageConverter"/>
+            <converters:IndexToImageConverter x:Key="IndexToImageConverter"/>
         </Grid.Resources>
         <StackPanel Orientation="Horizontal">
             <Grid Background="#F4F4F4" Width="300">
@@ -18,47 +19,55 @@
                     <RowDefinition Height="100"/>
                 </Grid.RowDefinitions>
                 <StackPanel Orientation="Vertical">
-                    
-                    <!-- Mmpk name area-->
-                    <TextBlock Text="{Binding MmpkItem.Title}" Grid.Row="0" Style="{StaticResource WhiteText}"
-                            FontSize="27" FontWeight="DemiBold" VerticalAlignment="Top" TextWrapping="Wrap"
-                                   Margin="25,25,0,25" Foreground="#3D5AFE"/>
-                    
+
                     <!-- Mmpk Thumbnail area -->
-                    <Image Name="Thumbnail" VerticalAlignment="Center" HorizontalAlignment="Center" Width="180" Height="120" Stretch="UniformToFill"
+                    <Grid>
+                        <!--<Image Name="Thumbnail" VerticalAlignment="Center" HorizontalAlignment="Center" Width="300" Height="100"
                            Source="{Binding MmpkItem.Thumbnail, Converter={StaticResource RuntimeImageConverter}}"
-                           Grid.Row="1"/>
+                           Grid.Row="0"/>-->
+                        <Image Name="Thumbnail" VerticalAlignment="Center" HorizontalAlignment="Center" Width="300" Height="100"
+                           Source="/Images/MmpkThumbnail.png" Grid.Row="0"/>
+                    </Grid>
+
+                    <!-- Mmpk name area-->
+                    <TextBlock Text="{Binding MmpkItem.Title}" Grid.Row="1" Style="{StaticResource WhiteText}"
+                            FontSize="27" FontWeight="Bold" VerticalAlignment="Top" TextWrapping="Wrap"
+                                   Margin="10,20,10,20" Foreground="#3F51B5"/>
 
                     <!-- Mmpk Description Area -->
-                    <StackPanel Orientation="Vertical" Margin="25,0,0,0" Grid.Row="2">
-                        <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
-                            <TextBlock Text="Modified: " Style="{StaticResource GrayText}"/>
+                    <StackPanel Orientation="Vertical" Margin="10,0,10,0" Grid.Row="2">
+                        <StackPanel Orientation="Horizontal" Margin="0,0,0,0">
+                            <TextBlock Text="Modified: " Style="{StaticResource GrayText}" FontStyle="Italic"/>
                             <TextBlock Text="{Binding MmpkItem.Modified.DateTime}" Style="{StaticResource GrayText}"
-                                   Margin="0,0,0,5"/>
+                                   Margin="0,0,0,5" FontStyle="Italic"/>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" Margin="0,20,0,0">
-                            <TextBlock Text="Maps: " Style="{StaticResource GrayText}"/>
-                            <TextBlock Text="{Binding MapItems.Count}" Style="{StaticResource GrayText}"/>
+                            <TextBlock Text="Maps: " Style="{StaticResource GrayText}" FontStyle="Italic"/>
+                            <TextBlock Text="{Binding MapItems.Count}" Style="{StaticResource GrayText}" FontStyle="Italic"/>
                         </StackPanel>
-                        <TextBlock Text="{Binding MmpkItem.Description}" FontSize="13" TextWrapping="Wrap" 
+                        <TextBlock Text="{Binding MmpkItem.Description}" TextWrapping="Wrap" 
                                Style="{StaticResource GrayText}" Margin="0,20,0,0" />
                     </StackPanel>
                 </StackPanel>
 
                 <!-- Sync Button Area -->
-                <StackPanel Orientation="Horizontal" Grid.Row="3" Margin="25,0,0,20">
-                    <Button Style="{StaticResource FlatButton}" Width="80" Height="80">
-                        <TextBlock Text="&#xE895;" Style="{StaticResource SymbolButton}"/>
-                    </Button>
-                    <StackPanel Orientation="Vertical" Margin="20,0,0,0" VerticalAlignment="Center">
-                        <TextBlock Text="Downloaded" Style="{StaticResource GrayText}" HorizontalAlignment="Center" Margin="0,0,0,10"/>
-                        <TextBlock Text="3/6/2017 8:44:02 AM" Style="{StaticResource GrayText}" HorizontalAlignment="Center"/>
+                <Border BorderBrush="#e7e7e7" BorderThickness="0,1,0,0" Grid.Row="3">
+                    <StackPanel Orientation="Horizontal"  Margin="20,20,0,20">
+                        <Button Style="{StaticResource FlatButton}" Width="48" Height="48">
+                            <TextBlock Text="&#xE895;" FontSize="30" Style="{StaticResource SymbolButton}"/>
+                        </Button>
+                        <StackPanel Orientation="Vertical" Margin="20,0,0,0" VerticalAlignment="Center">
+                            <TextBlock Text="Downloaded" Style="{StaticResource GrayText}" HorizontalAlignment="Left" 
+                                       FontSize="12" LineHeight="20"/>
+                            <TextBlock Text="3/6/2017 8:44:02 AM" Style="{StaticResource GrayText}" HorizontalAlignment="Left"
+                                       FontSize="12" LineHeight="20"/>
+                        </StackPanel>
                     </StackPanel>
-                </StackPanel>
+                </Border>
             </Grid>
 
             <!-- Map Items Panel -->
-            <ItemsControl ItemsSource="{Binding MapItems}" Margin="20, 50, 20, 50" >
+            <ItemsControl x:Name="MapBoxesControl" ItemsSource="{Binding MapItems}" AlternationCount="100">
                 <ItemsControl.ItemsPanel>
                     <ItemsPanelTemplate>
                         <WrapPanel/>
@@ -66,23 +75,50 @@
                 </ItemsControl.ItemsPanel>
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <Grid Margin="50,0,0,0" Width="300" Background="#3F51B5">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="*"/>
-                                <RowDefinition Height="150" />
-                            </Grid.RowDefinitions>
-                            <StackPanel Orientation="Vertical" Margin="10">
-                                <TextBlock Margin="0,0,0,20" Text="{Binding Item.Title}" Style="{StaticResource WhiteText}" FontSize="15"
-                                           FontWeight="Bold" Grid.Row="0" TextWrapping="Wrap" />
-                                <TextBlock Text="{Binding Item.Created.DateTime}" Style="{StaticResource WhiteText}" Margin="0,0,0,10"/>
-                                <TextBlock Text="{Binding Item.Description}" Style="{StaticResource WhiteText}" TextWrapping="Wrap" 
-                                           Margin="0,0,0,10" />
-                            </StackPanel>
-                            <Button Style="{StaticResource FlatButton}" Command="{Binding DataContext.OpenMapCommand, RelativeSource = {RelativeSource AncestorType = UserControl}}" 
-                                    CommandParameter ="{Binding}" Grid.Row="1" Width="180" Height="120">
-                                <Image Stretch="Uniform" Source="{Binding Item.Thumbnail, Converter={StaticResource RuntimeImageConverter}}"/>
-                            </Button>
-                        </Grid>
+                        <Border BorderBrush="#3F51B5" BorderThickness="1" Margin="40,40,0,0">
+                            <Grid Width="300">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="100"/>
+                                    <RowDefinition Height="*" />
+                                </Grid.RowDefinitions>
+                                <Button Style="{StaticResource FlatButton}" Command="{Binding DataContext.OpenMapCommand, RelativeSource = {RelativeSource AncestorType = UserControl}}" 
+                                            CommandParameter ="{Binding}" Width="300" Height="100" Grid.Row="0">
+                                    <!--<Image Stretch="UniformToFill"  Source="{Binding Item.Thumbnail, Converter={StaticResource RuntimeImageConverter}}"/>-->
+                                    <Image Source="{Binding Path=(ItemsControl.AlternationIndex), RelativeSource={RelativeSource TemplatedParent}, Converter={StaticResource IndexToImageConverter}}"/>
+                                </Button>
+                                <StackPanel Background="#3F51B5" Orientation="Vertical" Grid.Row="1">
+
+                                    <TextBlock Margin="15,20,15,0" VerticalAlignment="Center" Text="{Binding Item.Title}" Style="{StaticResource WhiteText}" FontSize="18" LineHeight="26"
+                                               FontWeight="DemiBold" TextWrapping="WrapWithOverflow"/>
+                                    <TextBlock Margin="15,20,15,20" Text="{Binding Item.Description}" FontSize="12" LineHeight="20" Grid.Row="1" Style="{StaticResource WhiteText}" TextWrapping="Wrap" />
+                                   
+                                    <!-- Map layers section -->
+                                    <!--<Border BorderBrush="#004575" BorderThickness="0,1,0,0">
+                                        <TextBlock Margin="15,20,15,0" Text="Layers" Style="{StaticResource WhiteText}" FontWeight="DemiBold"/>
+                                    </Border>
+                                        <ListView ItemsSource="{Binding AllLayers}" Background="#3F51B5" Margin="15,0,15,20" BorderThickness="0">
+                                        <ListView.ItemTemplate>
+                                            <DataTemplate>
+                                                <TextBlock Text="{Binding Name}" Style="{StaticResource WhiteText}" Margin="0, 20, 0, 0"/>
+                                            </DataTemplate>
+                                        </ListView.ItemTemplate>
+                                        <ListView.ItemContainerStyle>
+                                            <Style TargetType="{x:Type ListViewItem}">
+                                                <Setter Property="Background" Value="Transparent" />
+                                                <Setter Property="Template">
+                                                    <Setter.Value>
+                                                        <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                                            <ContentPresenter />
+                                                        </ControlTemplate>
+                                                    </Setter.Value>
+                                                </Setter>
+                                            </Style>
+                                        </ListView.ItemContainerStyle>
+                                    </ListView>-->
+                                      
+                                </StackPanel>
+                            </Grid>
+                        </Border>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
