--- a/OfflineMapBook/OfflineMapBook/Views/MapView.xaml
+++ b/OfflineMapBook/OfflineMapBook/Views/MapView.xaml
@@ -30,6 +30,7 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="100"/>
                 <ColumnDefinition Width="100"/>
+                <ColumnDefinition Width="100"/>
             </Grid.ColumnDefinitions>
             
             <!-- Back Button -->
@@ -39,14 +40,18 @@
             
             <!-- Map Title -->
             <TextBlock Text="{Binding Map.Item.Title}" VerticalAlignment="Center" Style="{StaticResource WhiteText}" FontSize="30" Grid.Column="1"/>
+            <!-- Search Button -->
+            <ToggleButton Style="{StaticResource FlatToggleButton}" x:Name="toggleBookmarks"  Grid.Column="2">
+                <TextBlock Text="&#xE8A4;" Style="{StaticResource SymbolButton}"/>
+            </ToggleButton>
             
             <!-- Search Button -->
-            <ToggleButton Style="{StaticResource FlatToggleButton}" x:Name="toggleSearch"  Grid.Column="2">
+            <ToggleButton Style="{StaticResource FlatToggleButton}" x:Name="toggleSearch"  Grid.Column="3">
                 <TextBlock Text="&#xE721;" Style="{StaticResource SymbolButton}"/>
             </ToggleButton>
             
             <!-- Legend Button -->
-            <ToggleButton Style="{StaticResource FlatToggleButton}" x:Name="toggleLegend" Grid.Column="3">
+            <ToggleButton Style="{StaticResource FlatToggleButton}" x:Name="toggleLegend" Grid.Column="4">
                 <TextBlock Text="&#xE81E;" Style="{StaticResource SymbolButton}"/>
             </ToggleButton>
         </Grid>
@@ -120,6 +125,31 @@
                     </Style>
                 </ListView.ItemContainerStyle>
             </ListView>
+
+            <!-- Bookmarks Panel-->
+            <ListView Width="300" ItemsSource="{Binding Map.Bookmarks}" Background="#3F51B5" Visibility="{Binding IsChecked, ElementName=toggleBookmarks, 
+                Converter={StaticResource BooleanToVisibilityConverter}}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Button Content="{Binding Name}" Style="{StaticResource ListViewButton}" FontSize="20" 
+                                    Command="{Binding DataContext.ZoomToBookmarkCommand, RelativeSource={RelativeSource AncestorType=ListView}}" 
+                                    CommandParameter="{Binding Path=Viewpoint}"/>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="{x:Type ListViewItem}">
+                        <Setter Property="Background" Value="Transparent" />
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                    <ContentPresenter />
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ListView.ItemContainerStyle>
+            </ListView>
+
         </StackPanel>
         
         <!-- Left Identify Panel area opening over map -->
